--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -17,7 +17,13 @@
   src: url("../fonts/Roboto-Thin.ttf");
 }
 
-:root {
+* {
+  background-color: var(--mainbg);
+  font-family: Roboto-Thin, sans-serif;
+  color: var(--mainfc);
+}
+
+body {
   --mainbg: hsl(204, 69%, 50%);
   --secondarybg: hsl(199, 64%, 73%);
   --mainfc: hsl(0, 0%, 100%);
@@ -31,24 +37,18 @@
   --starhoverbg: hsl(42, 93%, 64%);
 }
 
-.theme-2 {
-  --mainbg: hsl(161, 49%, 39%);
-  --secondarybg: hsl(161, 52%, 48%);
+.dark-theme {
+  --mainbg: hsl(0, 0%, 0%);
+  --secondarybg: hsl(150, 4%, 11%);
   --mainfc: hsl(0, 0%, 100%);
-  --secondaryfc: hsl(0, 0%, 41%);
+  --secondaryfc: hsl(0, 0%, 100%);
   --tertiaryfc: hsl(0, 0%, 79%);
-  --placeholderfc: hsl(161, 49%, 39%);
-  --buttonbg: hsl(33, 89%, 52%);
-  --buttonhoverbg: hsl(33, 81%, 43%);
-  --buttonfc: hsl(231, 27%, 19%);
-  --starbg: hsl(240, 6%, 26%);
+  --placeholderfc: hsl(204, 69%, 50%);
+  --buttonbg: hsl(0, 0%, 100%);
+  --buttonhoverbg: hsl(0, 3%, 83%);
+  --buttonfc: hsl(204, 69%, 50%);
+  --starbg: hsl(0, 0%, 100%);
   --starhoverbg: hsl(42, 93%, 64%);
-}
-
-* {
-  background-color: var(--mainbg);
-  font-family: Roboto-Thin, sans-serif;
-  color: var(--mainfc);
 }
 
 ::-webkit-scrollbar {
@@ -111,6 +111,7 @@ ul li {
 
 .main-header-col-1 {
   min-height: 100%;
+  max-width: 50% !important;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -118,6 +119,7 @@ ul li {
 
 .main-header-col-2 {
   min-height: 100%;
+  max-width: 50% !important;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -125,63 +127,7 @@ ul li {
 
 /* button */
 
-/* Dropdown Button */
-.dropbtn {
-  background-color: var(--buttonbg);
-  color: var(--buttonfc);
-  padding: 6px 10px;
-  height: 48px;
-  font-size: 16px;
-  cursor: pointer;
-  border: 0;
-  border-radius: 25px;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: var(--buttonhoverbg);
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: var(--buttonbg);
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  border: 0;
-  border-radius: 25px;
-}
-
-/* Links inside the dropdown */
-.dropdown-content button {
-  width: 100%;
-  text-align: left;
-  background-color: var(--buttonbg);
-  color: var(--buttonfc);
-  padding: 12px 12px;
-  text-decoration: none;
-  display: block;
-  border: 0;
-  border-radius: 25px;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content button:hover {
-  background-color: var(--buttonhoverbg);
-  color: var(--buttonfc);
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
-
-.createsurvey {
+.changetheme {
   height: 48px;
   padding: 6px 10px;
   background: var(--buttonbg);
@@ -190,6 +136,22 @@ ul li {
   font-weight: bold;
   border-radius: 50px;
   border: 0;
+  transition: all 0.3s;
+}
+
+.changetheme:hover {
+  background: var(--buttonhoverbg);
+}
+
+.createsurvey {
+  height: 48px;
+  padding: 6px 10px;
+  background: var(--buttonbg);
+  color: var(--buttonfc);
+  font-size: 16px;
+  font-weight: bold;
+  border: 0;
+  border-radius: 50px;
   transition: all 0.3s;
 }
 
@@ -302,8 +264,14 @@ ul li {
 }
 
 
+@media screen and (max-width: 300px) {
+  .changetheme, .createsurvey {
+    height: 55px;
+  }
+}
+
 @media screen and (max-width: 350px) {
-  .main-header-col {
+  .main-header-col-1, .main-header-col-2 {
     margin: 0;
     justify-content: center;
   }
@@ -322,7 +290,12 @@ ul li {
 --------------------------------------------------------------*/
 
 .notification {
+  max-width: 100vw;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
 .notification-header {
@@ -344,15 +317,8 @@ ul li {
 }
 
 .notification-body {
-  width: 100%;
-  position: fixed;
-  top: 128px;
-  right: 0;
-  bottom: 128px;
-  left: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   text-align: center;
 }
@@ -384,17 +350,18 @@ ul li {
   transition: all 0.3s;
 }
 
-.tooltip{
+.tooltip {
+  align-self: center;
   padding: 6px 10px;
   z-index: -1;
   background: linear-gradient(var(--buttonbg), var(--buttonhoverbg));
   color: var(--buttonfc);
   border-radius: 10px;
-  transition: opacity 0.4s, margin-left 0.4s;
+  transition: opacity 0.4s, margin-left 0.5s;
 }
 
-.tooltip.show{
-  margin-left: 210px;
+.tooltip.show {
+  margin-left: 100%;
   pointer-events: auto;
 }
 
@@ -408,6 +375,20 @@ ul li {
   font-size: 14px;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 500px) {
+  .tooltip.show {
+    margin-left: 77.5%;
+    pointer-events: auto;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .tooltip.show {
+    margin-left: 80%;
+    pointer-events: auto;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -608,7 +589,11 @@ ul li {
 --------------------------------------------------------------*/
 
 .help {
-  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
 .help-header {
@@ -630,19 +615,7 @@ ul li {
   justify-content: end;
 }
 
-/* x-button */
-
-.backtomain a {
-  font-weight: bold;
-  text-decoration: none;
-}
-
 .help-body {
-  position: absolute;
-  top: 128px;
-  right: 0;
-  bottom: 128px;
-  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -661,6 +634,14 @@ ul li {
 
 .help-text h3 {
   font-size: 12px;
+}
+
+@media screen and (max-width: 400px) {
+  .icon-help {
+    width: 111px;
+    height: 128px;
+    content: url(../img/feedo.png);
+  }
 }
 
 /*--------------------------------------------------------------
@@ -703,6 +684,7 @@ ul li {
   display: flex;
   align-items: center;
   justify-content: end;
+  z-index: 1;
 }
 
 
@@ -865,13 +847,13 @@ ul li {
 
 .answer-submit {
   color: var(--buttonfc);
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
-  background: none;
   padding: 6px 10px;
   background: var(--buttonbg);
-  height: 48px;
-  border-radius: 50px;
+  height: 55px;
+  min-width: 15%;
+  border-radius: 25px;
   border: 0;
   transition: 0.3s;
 }
@@ -879,6 +861,7 @@ ul li {
 .answer-submit:hover {
   background: var(--buttonhoverbg);
 }
+
 
 @media screen and (max-width: 350px) {
   .valuation label:before, .valuation label:after {
@@ -1100,9 +1083,9 @@ footer {
 }
 
 .help-footer {
-  position: fixed;
-  bottom: 0.1em;
-  right: 0.5em;
+  display: flex;
+  justify-content: end;
+  margin: 0 0.5% 0 0;
 }
 
 .answer-footer {
@@ -1118,7 +1101,7 @@ footer {
 }
 
 .notification-footer {
-  position: fixed;
-  bottom: 0.1em;
-  right: 0.5em;
+  display: flex;
+  justify-content: end;
+  margin: 0 0.5% 0 0;
 }
